[package]
name = "rusty-events"
version = "0.1.0"
authors = ["karthikraman22 <kartraman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.1"
rand = "0.7.3"
